# FANUC_Backup_Analyser

./: .gitignore  README.md  dev_parse.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
models/: fanuc_models.py  search_models.py
services/: converter.py  exporter.py  interfaces.py  orchestrator.py  parser.py  searcher.py
services/converter/: base_converter.py  tp_converter.py  vr_sv_converter.py
services/parser/: base_parser.py  dataid_csv_parser.py  va_parser.py
tests/: conftest.py  test_converter.py  test_dataid_csv_parser.py  test_exporter.py  test_integration.py  test_models_settings_worker.py  test_parser.py  test_searcher.py  test_tp_converter.py  test_va_parser.py  test_vr_sv_converter.py
ui/: app.py  theme.py  viewmodel.py
ui/components/: detail_dialog.py  filters_bar.py  header.py  main_panel.py  settings_dialog.py  sidebar.py  statusbar.py
ui/components/main_panel/: __init__.py  _helpers.py  _navigator.py  _renderer.py  log_tab.py  main_panel.py  results_tree.py
utils/: logger.py  worker.py
